# JeskePortfolio

./: .gitignore  README.md  pyproject.toml
Notebooks/: Classifiers.ipynb  Clustering.ipynb  SOM.ipynb  playground.ipynb
src/: Classifier.py  KMeans.py  KMediods.py  KNearestNeighbors.py  LearningVectorQuantization.py  LinearDiscriminantAnalysis.py  Transformer.py  main.py  playground.ipynb  util.py
src/Preprocessing/: Standardizer.py
src/Supervised/: Classifier.py  DistanceClassifier.py  KNearestNeighbors.py  LearningVectorQuantization.py  LinearDiscriminantAnalysis.py
src/Unsupervised/: KMeans.py  KMediods.py
